@@ -1,3 +1,9 @@
+2006-10-19  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/gedit-spinner.[ch]:
+
+	Update to the latest version of the spinner.
+
 2006-10-19  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* src/baobab-scan.c: (loopdir):
